# picoclaw

./: .gitignore  Implementation-Plan-picoclaw-qwen35-migration.md  Modelfile-picoclaw  README.md  review_qwen35_migration_plan.md  start_gateway.ps1
picoassist/: .gitignore  AGENTS.md  CLAUDE.md  README.md  client_config.yaml  conftest.py  digest_runner.py  policy.yaml  pyproject.toml
picoassist/config/: __init__.py  client_config.py  policy.py
picoassist/config/tests/: test_config.py  test_policy.py
picoassist/docs/: CLIENT_CONFIG_TEMPLATE.md  HEARTBEAT.md  LESSONS_LEARNED.md  MS-azure-app-registration.md  PLAN_build_picoclaw_from_source.md  PROJECT_REVIEW_REPORT.md  README_PM_ASSISTANT_LAB.md  Superpower-skils-plan.md  USER-template.md  V1-IMPLEMENTATION_TASKS.md  V2-Implementation-Plan.md  V2-P1-Implementation.md  V2-P2-Implementation.md  V2-P3-Implementation.md  V2-P4-Implementation.md  V2-P5-Implementation.md  V2-P6-Implementation.md  V2-P7-Implementation.md  picoclaw-setup.md  picoclaw-skill-format.md  picoclaw-tools-configuration.md  roadmap.md
picoassist/scripts/: build_picoclaw.ps1  install_skill.ps1  run_daily_digest.ps1  run_interactive.ps1  schedule_task.ps1  start_services.ps1
picoassist/services/action_log/: __init__.py  db.py  models.py
picoassist/services/approval_engine/: __init__.py  engine.py  models.py
picoassist/services/browser_worker/: __init__.py  app.py  models.py  playwright_runner.py
picoassist/services/linkedin_worker/: __init__.py  app.py  db.py  models.py  (+2 more)
picoassist/skill/: SKILL.md
picoassist/tests/: test_integration.py
(+98 files in other folders)
